--- a/index.html
+++ b/index.html
@@ -2,27 +2,22 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
-		<style>
-			pre {
-				line-height: 4em;
-			}
-		</style>
+		<meta name="viewport" content="width=device-width,initial-scale=1.0" />
 		<title>2K</title>
 	</head>
 	<body>
 		<h1>2k</h1>
 		<p>2048 in 2048 bytes</p>
-		<pre id="out"></pre>
-		<p id="result"></p>
+		<pre id="o" style="line-height:4em"></pre>
+		<p id="w"></p>
 		<script>
+			id = m => m;
 			zeros = n => Array(n).fill(0);
-			padZeros = (l, r) =>
-				r.length >= l ? r.slice(0, l) : [...r, ...zeros(l - r.length)];
-			packCells = (
+			pad = (l, r) =>
+				r.length >= l ? r.slice(0, l) : r.concat(zeros(l - r.length));
+			pack = (
 				m,
-				p = (r, f = r.filter(c => c)) =>
+				p = (r, f = r.filter(id)) =>
 					!f.length
 						? []
 						: f.length == 1
@@ -30,56 +25,48 @@
 						: f[0] == f[1]
 						? [f[0] * 2, ...p(f.slice(2))].flat()
 						: [f[0], ...p(f.slice(1))].flat()
-			) => m.map(r => padZeros(m.length, p(r)));
-			setCell = (v, x, y, m) => [
-				...m.slice(0, y),
-				m[y].map((c, i) => (i == x ? v : c)),
-				...m.slice(y + 1)
-			];
-			plantSeed = (
+			) => m.map(r => pad(m.length, p(r)));
+			set = (v, x, y, m) => (m[y][x] = v) && m;
+			seed = (
 				m,
 				o = m
 					.flatMap((r, y) => r.map((v, x) => ({ x, y, v })))
 					.filter(c => c.v == 0),
 				c = o.length && o[Math.floor(Math.random() * o.length)]
-			) => (o.length ? setCell(Math.random() < 0.1 ? 4 : 2, c.x, c.y, m) : m);
-			makeMove = (rot, rotback) => (m, n = rotback(packCells(rot(m)))) =>
-				n.some((r, y) => r.some((c, x) => c !== m[y][x])) ? plantSeed(n) : n;
-			identity = m => m;
-			rot90 = m => m.map((_, i) => m.map(r => r[m.length - i - 1]));
-			rot180 = m => rot90(rot90(m));
-			rot270 = m => rot180(rot90(m));
-			game = plantSeed(plantSeed(Array(4).fill(zeros(4))));
-			render = m => {
-				out.innerText = m.map(r => r.join("\t")).join("\n");
-				result.innerText = (m.flat().some(c => c >= 2048) && "Winner!") || "";
-			};
-			render(game);
-			update = d =>
-				d == "L"
-					? makeMove(identity, identity)
-					: d == "U"
-					? makeMove(rot90, rot270)
-					: d == "D"
-					? makeMove(rot270, rot90)
-					: d == "R"
-					? makeMove(rot180, rot180)
-					: identity;
-			document.addEventListener("keyup", e => {
-				e.key.startsWith("Arrow") && render((game = update(e.key[5])(game)));
+			) => (o.length ? set(Math.random() < 0.1 ? 4 : 2, c.x, c.y, m) : m);
+			mv = (rot, rev) => (m, n = rev(pack(rot(m)))) =>
+				n.some((r, y) => r.some((c, x) => c !== m[y][x])) ? seed(n) : n;
+			r90 = m => m.map((_, i) => m.map(r => r[m.length - i - 1]));
+			r180 = m => r90(r90(m));
+			r270 = m => r180(r90(m));
+			(rendr = m => {
+				o.innerText = m.map(r => r.join("\t")).join("\n");
+				w.innerText = (m.flat().some(c => c >= 2048) && "Winner!") || "";
+			})((brd = seed(seed(zeros(4).map(() => zeros(4))))));
+			upd = d =>
+				d == 0
+					? mv(id, id)
+					: d == 1
+					? mv(r90, r270)
+					: d == 2
+					? mv(r180, r180)
+					: d == 3
+					? mv(r270, r90)
+					: id;
+			l = document.addEventListener;
+			l("keyup", e => {
+				e.key.startsWith("Arrow") && rendr((brd = upd(e.keyCode - 37)(brd)));
 			});
-			ts = null;
-			tt = 50;
-			document.addEventListener("touchstart", e => (ts = e.changedTouches[0]));
-			document.addEventListener(
+			l("touchstart", e => (tch = e.changedTouches[0]));
+			l(
 				"touchend",
 				(
 					e,
 					t = e.changedTouches[0],
-					x = ts.pageX - t.pageX,
-					y = ts.pageY - t.pageY,
-					d = x > tt ? "L" : x < -tt ? "R" : y > tt ? "U" : y < -tt ? "D" : 0
-				) => render((game = update(d)(game))) && (ts = null)
+					x = tch.pageX - t.pageX,
+					y = tch.pageY - t.pageY,
+					d = x > 50 ? 0 : x < -50 ? 2 : y > 50 ? 1 : y < -50 ? 3 : 9
+				) => rendr((brd = upd(d)(brd))) && (tch = null)
 			);
 		</script>
 	</body>
